# CASE-Implementation-PyPI-Pillow

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
exifread_case/: exifread_case.py
exifread_case/exifread_output_examples/: exifread_output_processing.txt
pillow_case/: exif_node_maker.py  pillow_case.py  pillow_exif.py  pillow_exif_future.py
pillow_case/pillow_output_examples/: pillow_key_values.txt  pillow_output_preprocessing.txt
pillow_output_examples/: pillow_case_799987.json  pillow_key_values.txt
