[metadata]
name = CASE-Implementation-PyPI-Pillow
version = 0.1.0
author = Robert Dowdall
author_email = dowdallr@ucd.ie
description = Case Implementation of some Pillow functionality
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/casework/CASE-Implementation-PyPI-Pillow
classifiers =
    Development Status :: 4 - Beta
    License :: Public Domain
    Operating System :: Linux Based
    Programming Language :: Python :: 3

[options]
install_requires =
    Pillow
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    pillow2case = pillow_case.pillow_case:main


